--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,7 @@ okio = "3.2.0"
 richtext = "0.15.0"
 sqldelight = "1.5.4"
 versionsPlugin = "0.42.0"
+playServicesBase = "18.4.0"
 
 ##################################################################################################################################
 
@@ -81,6 +82,7 @@ linkifyText = { module = "com.github.firefinchdev:linkify-text", version.ref = "
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 sqldelight = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqldelight" }
 systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
+play-services-base = { group = "com.google.android.gms", name = "play-services-base", version.ref = "playServicesBase" }
 
 ##################################################################################################################################
 
